# router/user.js
@@ -4,8 +4,15 @@ const {
   validateSignUpBodyRequest,
   validateUsernameOrEmail,
   validateLoginBodyRequest,
+  validateUserParams,
 } = require('../middleware/user');
-const { signUpNewUser, loginUser } = require('../controller/user');
+const {
+  signUpNewUser,
+  loginUser,
+  getUserNotes,
+  getAllUsers,
+} = require('../controller/user');
+const { verifyToken } = require('../jsonwebtoken/jwt');
 
 router.post(
   '/signup',
@@ -13,7 +20,9 @@ router.post(
   validateUsernameOrEmail,
   signUpNewUser
 );
-
 router.post('/login', validateLoginBodyRequest, loginUser);
+
+router.get('/notes/:id', validateUserParams, verifyToken, getUserNotes);
+router.get('/all', verifyToken, getAllUsers);
 
 module.exports = router;
